# app-backend

./: .env.example  .gitignore  2026-04-27-pintool-anchor-spec.md  2026-05-02-pintool-strategy-runtime-spec.md  2026-05-08-strategy-runtime-spec.md  ARCHITECTURE.md  MAGICBLOCK_UMBRA_IMPLEMENTATION.md  README.md  TEST_COVERAGE_REPORT.md  client.ts  hackathon-privacy-tech-research.md  main.ts  package-lock.json  package.json  project-strategy-platform-migration-report.md  skills-lock.json  strategy-privacy-research-report.md  test.ts  tsconfig.json  wallet-keypair.json  workflow-execute.ts
.claude/: settings.local.json
backend/: .dockerignore  .env.example  .eslintrc.js  .gitignore  API_DOCUMENTATION.md  DEPLOYMENT.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  SKILL.md  package-lock.json  package.json  token.txt  tsconfig.json
database/: initial.sql
frontend-admin/: .env.example  Dockerfile  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  playwright.config.ts  proxy.ts  tailwind.config.ts
programs/: Anchor.toml  README.md  package-lock.json  package.json  run-tests.sh  tsconfig.json
programs/programs/pyth_price_feed_node/: Cargo.toml
programs/programs/pyth_price_feed_node/src/: constants.rs  errors.rs  lib.rs
programs/programs/pyth_price_feed_node/src/instructions/: check_price.rs  initialize_feed.rs  mod.rs  reset_trigger.rs
programs/programs/pyth_price_feed_node/src/state/: mod.rs
programs/programs/pyth_price_feed_node/tests/: mollusk_check_price.rs
programs/programs/risk_guard_node/: Cargo.toml
programs/programs/risk_guard_node/src/: constants.rs  errors.rs  lib.rs
programs/programs/risk_guard_node/src/instructions/: check_drawdown.rs  initialize_guard.rs  mod.rs  reset_guard.rs
programs/programs/risk_guard_node/src/state/: mod.rs
programs/programs/risk_guard_node/tests/: mollusk_check_drawdown.rs
programs/programs/strategy_runtime/: Cargo.toml
programs/programs/strategy_runtime/src/: constants.rs  errors.rs  lib.rs
programs/programs/strategy_runtime/src/instructions/: adjust_subscription_params.rs  close_deployment.rs  close_follower_vault.rs  close_public_snapshot.rs  close_vault_authority.rs  collect_fees.rs  commit_state.rs  commit_state_on_er.rs  delegate_strategy_state.rs  emergency_pause.rs  emergency_resume.rs  fund_follower_vault.rs  initialize_deployment.rs  initialize_follower_subscription.rs  initialize_follower_vault.rs  initialize_follower_vault_authority.rs  initialize_strategy_state.rs  initialize_strategy_version.rs  initialize_vault_authority.rs  mod.rs  set_follower_vault_status.rs  set_keeper.rs  set_lifecycle_status.rs  set_public_snapshot.rs  undelegate_strategy_state.rs  withdraw_from_vault.rs
programs/programs/strategy_runtime/src/state/: follower_vault.rs  follower_vault_authority.rs  mod.rs  public_snapshot.rs  strategy_deployment.rs  strategy_state.rs  strategy_subscription.rs  strategy_version.rs  vault_authority.rs
src/: client.ts  create_vault.ts  kamino-client.ts  price-feed.ts  run-workflow.ts  swap.ts  web3-workflow-types.ts  workflow-executor.ts
src-legacy/: kamino-client.ts  price-feed.ts  run-workflow.ts  telegram-notifier.ts  web3-workflow-types.ts  workflow-executor.ts
src/utils/: tx.ts  (+6 more)
workflows/: price-trigger-swap.json  test-workflow-fixed.json
(+555 files in other folders)
