[package]
name = "pyth_price_feed_node"
version = "0.1.0"
description = "On-chain Pyth price-condition node for the strategy_runtime workflow ecosystem"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pyth_price_feed_node"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }

[dev-dependencies]
mollusk-svm = "0.12"
solana-account = "3.2"
solana-instruction = "3.1"
solana-pubkey = "4.0"
solana-sdk-ids = "3.1"
solana-native-token = "3.0"
sha2 = "0.10"
