[package]
name = "strategy_runtime"
version = "0.1.0"
description = "Strategy runtime registry for Anchor-backed deployments"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "strategy_runtime"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.1", features = ["init-if-needed"] }

# serde_json was previously pinned to avoid `select_unpredictable` in older
# platform-tools. With rustc 1.95+ and Solana 3.1.x this is no longer needed.
serde_json = "1.0"

[dev-dependencies]
# Mollusk SVM test harness — fast in-process instruction testing without a validator.
mollusk-svm = "0.12"
solana-sdk = "~2.2"
